SOE-3276: Banner overlay: button in wysiwyg not responsive scaling codeclimate fixes

--- a/scss/components/_soe_people_spotlight.scss
+++ b/scss/components/_soe_people_spotlight.scss
@@ -68,6 +68,58 @@
   p {
     overflow: hidden;
   }
+
+  &.spotlight {
+    #content-head {
+      margin-bottom: 0;
+    }
+
+    #content-body {
+      #views-exposed-form-stanford-ppl-spot-3-v-card-page-1 {
+        .views-exposed-form {
+          #edit-field-s-ppl-spot-affiliation-tid-wrapper {
+            padding-right: 20px;
+          }
+
+          .views-exposed-widget {
+            padding-right: 0;
+
+            @include breakpoint-max(large) {
+              padding-right: 1em;
+            }
+
+            @include breakpoint-max(medium) {
+              padding-right: 0.8em;
+            }
+
+            @include breakpoint-max(small) {
+              padding-right: 0.7em;
+            }
+
+            @include breakpoint-max(smaller) {
+              padding-right: 0.5em;
+            }
+          }
+        }
+      }
+
+      .view-stanford-ppl-spot-3-v-card {
+        .views-row-first {
+          padding-top: 0;
+
+          .spotlight-all-content-container {
+            margin-bottom: 0;
+            padding-top: 36px;
+          }
+        }
+      }
+
+      .attachment .view-stanford-ppl-spot-3-v-card .views-row-first .spotlight-all-content-container {
+        margin-bottom: 60px;
+        padding-top: 0;
+      }
+    }
+  }
 }
 
 .view-stanford-people-spotlight-h-card {
@@ -657,59 +709,6 @@
   }
 }
 
-.main {
-  &.spotlight {
-    #content-head {
-      margin-bottom: 0;
-    }
-
-    #content-body {
-      #views-exposed-form-stanford-ppl-spot-3-v-card-page-1 {
-        .views-exposed-form {
-          #edit-field-s-ppl-spot-affiliation-tid-wrapper {
-            padding-right: 20px;
-          }
-
-          .views-exposed-widget {
-            padding-right: 0;
-
-            @include breakpoint-max(large) {
-              padding-right: 1em;
-            }
-
-            @include breakpoint-max(medium) {
-              padding-right: 0.8em;
-            }
-
-            @include breakpoint-max(small) {
-              padding-right: 0.7em;
-            }
-
-            @include breakpoint-max(smaller) {
-              padding-right: 0.5em;
-            }
-          }
-        }
-      }
-
-      .view-stanford-ppl-spot-3-v-card {
-        .views-row-first {
-          padding-top: 0;
-
-          .spotlight-all-content-container {
-            margin-bottom: 0;
-            padding-top: 36px;
-          }
-        }
-      }
-
-      .attachment .view-stanford-ppl-spot-3-v-card .views-row-first .spotlight-all-content-container {
-        margin-bottom: 60px;
-        padding-top: 0;
-      }
-    }
-  }
-}
 #block-views-005720ec0398a13d1a26b9de441e83ca > h2 {
   text-align: center;
   padding-bottom: 30px;
